unpackaged/main/default/objects/pse__IHC_Mapping_Concur_to_PSA__mdt/pse__IHC_Mapping_Concur_to_PSA__mdt.object-meta.xml
<CustomObject>
    <description>Contains records that specify information required for Transformation creation in Integration Hub Connector.</description>
    <label>IHC Mapping Concur to PSA</label>
    <pluralLabel>IHC Mappings Concur to PSA</pluralLabel>
</CustomObject>