unpackaged/main/default/objects/pse__IHC_Mapping_Concur_to_PSA__mdt/fields/pse__PSA_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__PSA_Field__c</fullName>
    <description>Field of PSA Object for which transformation needs to be created in Integration Hub Connector.</description>
    <inlineHelpText>Field of PSA Object for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
    <label>PSA Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>