unpackaged/main/default/objects/pse__IHC_Mapping_Concur_to_PSA__mdt/fields/pse__Third_Party_Application__c.field-meta.xml
<CustomField>
    <fullName>pse__Third_Party_Application__c</fullName>
    <description>Third Party Application for which transformation needs to be created in Integration Hub Connector.</description>
    <inlineHelpText>Third Party Application for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
    <label>Third Party Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>