unpackaged/main/default/objects/pse__IHC_Mapping_Concur_to_PSA__mdt/fields/pse__Third_Party_Application_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Third_Party_Application_Field__c</fullName>
    <description>Field of Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</description>
    <inlineHelpText>Field of Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
    <label>Third Party Application Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>