unpackaged/main/default/objects/pse__IHC_Mapping_Concur_to_PSA__mdt/fields/pse__Third_Party_Application_Object__c.field-meta.xml
<CustomField>
    <fullName>pse__Third_Party_Application_Object__c</fullName>
    <description>Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</description>
    <inlineHelpText>Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
    <label>Third Party Application Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>