unpackaged/main/default/objects/pse__IHC_Mapping_Concur_to_PSA__mdt/fields/pse__VDR_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__VDR_Key__c</fullName>
    <description>Key in Virtual Data Resource on Integration Hub Connector.</description>
    <inlineHelpText>Key in Virtual Data Resource in Integration Hub Connector.</inlineHelpText>
    <label>VDR Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>