unpackaged/main/default/objects/pse__IHC_Mapping_Concur_to_PSA__mdt/fields/pse__VDR_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__VDR_Name__c</fullName>
    <description>The Name of Virtual Data Resource in Integration Hub Connector.</description>
    <inlineHelpText>The Name of Virtual Data Resource in Integration Hub Connector.</inlineHelpText>
    <label>VDR Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>